--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     "C_Cpp.clang_format_formatOnSave": true,
-    "clang.cxxflags":["-std=c++11"],
+    "clang.cxxflags":["-std=c++11", "-I/usr/local/cuda/include", "-I/usr/local/cuda/extras/CUPTI/include"],
     "files.associations": {
         "array": "cpp",
         "atomic": "cpp",
