more work on peer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "*.ipp": "cpp",
-        "optional": "cpp"
+        "optional": "cpp",
+        "algorithm": "cpp"
     }
 }
