activate callbacks on cudaMallocManaged

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ examples/samples/matrixMul/mm
 examples/samples/vectorAdd/vec
 examples/samples/deviceQuery/query
 examples/samples/simpleMultiGPU/mgpu
+examples/samples/UnifiedMemoryStreams/ums
