--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ sudo: false
 install:
   - wget https://developer.nvidia.com/compute/cuda/9.0/Prod/local_installers/cuda_9.0.176_384.81_linux-run -O cuda9.run
   - chmod +x cuda9.run
-  - ./cuda9.run --silent --toolkit --tolkitpath=cuda-9.0
+  - ./cuda9.run --silent --toolkit --toolkitpath=cuda-9.0
 
 script:
   - ln -s Makefile.config.travis Makefile.config
