--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ addons:
       - libboost-dev
       - cppcheck
       - doxygen
-      - texlive-full
+      - texlive
+      - texlive-xcolor
       - graphviz
       - libnuma-dev
 
