travis: try latex-xcolor

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
       - cppcheck
       - doxygen
       - texlive
-      - texlive-xcolor
+      - latex-xcolor
       - graphviz
       - libnuma-dev
 
