--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,15 @@ sudo: required
 
 services: docker
 
+env:
+  global:
+    - CUDNN_URL="https://storage.googleapis.com/cwpearson-cudnn/cudnn-9.0-linux-x64-v7.tgz"
+    - CUDNN_PATH=cudnn.tar.gz
+    - CUDA_ROOT=$HOME/cuda-9.0
+    - CUDASDK_URL="https://developer.nvidia.com/compute/cuda/9.0/Prod/local_installers/cuda_9.0.176_384.81_linux-run"
+    - CUDASDK_PATH="cudasdk.run"
+
 install:
-  - export CUDNN_URL="https://storage.googleapis.com/cwpearson-cudnn/cudnn-9.0-linux-x64-v7.tgz"
-  - export CUDNN_PATH=cudnn.tar.gz
-  - export CUDA_ROOT=$HOME/cuda-9.0
-  - export CUDASDK_URL="https://developer.nvidia.com/compute/cuda/9.0/Prod/local_installers/cuda_9.0.176_384.81_linux-run"
-  - export CUDASDK_PATH="cudasdk.run"
   - mkdir -p $CUDA_ROOT
   - wget $CUDNN_URL -O $CUDNN_PATH
   - tar -xvf $CUDNN_PATH
@@ -23,6 +26,7 @@ install:
   - wget $CUDASDK_URL -O $CUDASDK_PATH
   - chmod +x $CUDASDK_PATH
   - ./$CUDASDK_PATH --silent --toolkit --toolkitpath=$CUDA_ROOT
+  - rm -v $CUDASDK_PATH
   - ln -s Makefile.config.travis Makefile.config
 
 script:
