--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ addons:
       - libboost-dev
       - cppcheck
       - libnuma-dev
+      - libcurl4-openssl-dev
+      - cmake
+      - git
 
 sudo: required
 
@@ -16,8 +19,20 @@ env:
     - CUDA_ROOT=$HOME/cuda-9.0
     - CUDASDK_URL="https://developer.nvidia.com/compute/cuda/9.0/Prod/local_installers/cuda_9.0.176_384.81_linux-run"
     - CUDASDK_PATH="cudasdk.run"
+    - OPENTRACING_SRC_PATH=$HOME/opentracing-cpp
+    - OPENTRACING_INSTALL_PATH=$HOME/opentracing
+    - ZIPKIN_SRC_PATH=$HOME/zipkin-cpp-opentracing
+    - ZIPKIN_INSTALL_PATH=$HOME/zipkin
 
 install:
+  - git clone https://github.com/opentracing/opentracing-cpp.git $OPENTRACING_SRC_PATH
+  - cd $OPENTRACING_SRC_PATH && mkdir .build && cd .build
+  - cmake .. -DCMAKE_INSTALL_REPFIX=$OPENTRACING_INSTALL_PATH
+  - make && make install
+  - git clone https://github.com/rnburn/zipkin-cpp-opentracing.git $ZIPKIN_SRC_PATH
+  - cd $ZIPKIN_SRC_PATH && mkdir .build && cd .build
+  - cmake .. -DCMAKE_INSTALL_REPFIX=$ZIPKIN_INSTALL_PATH
+  - make && make install
   - mkdir -p $CUDA_ROOT
   - wget $CUDNN_URL -O $CUDNN_PATH
   - tar -xvf $CUDNN_PATH
