--- a/.travis.yml
+++ b/.travis.yml
@@ -19,19 +19,21 @@ env:
     - CUDA_ROOT=$HOME/cuda-9.0
     - CUDASDK_URL="https://developer.nvidia.com/compute/cuda/9.0/Prod/local_installers/cuda_9.0.176_384.81_linux-run"
     - CUDASDK_PATH="cudasdk.run"
-    - OPENTRACING_SRC_PATH=$HOME/opentracing-cpp
-    - OPENTRACING_INSTALL_PATH=$HOME/opentracing
-    - ZIPKIN_SRC_PATH=$HOME/zipkin-cpp-opentracing
-    - ZIPKIN_INSTALL_PATH=$HOME/zipkin
+    - OPENTRACING_SRC=$HOME/opentracing-cpp
+    - OPENTRACING_ROOT=$HOME/opentracing
+    - OPENTRACING_INCLUDE=$OPENTRACING_ROOT/include
+    - ZIPKIN_SRC=$HOME/zipkin-cpp-opentracing
+    - ZIPKIN_ROOT=$HOME/zipkin
+    - ZIPKIN_INCLUDE=$ZIPKIN_ROOT/include
 
 install:
-  - git clone https://github.com/opentracing/opentracing-cpp.git $OPENTRACING_SRC_PATH
-  - cd $OPENTRACING_SRC_PATH && mkdir .build && cd .build
-  - cmake .. -DCMAKE_INSTALL_PREFIX=$OPENTRACING_INSTALL_PATH
+  - git clone https://github.com/opentracing/opentracing-cpp.git $OPENTRACING_SRC
+  - cd $OPENTRACING_SRC && mkdir .build && cd .build
+  - cmake .. -DCMAKE_INSTALL_PREFIX=$OPENTRACING_ROOT
   - make && make install
-  - git clone https://github.com/rnburn/zipkin-cpp-opentracing.git $ZIPKIN_SRC_PATH
-  - cd $ZIPKIN_SRC_PATH && mkdir .build && cd .build
-  - cmake .. -DCMAKE_INSTALL_PREFIX=$ZIPKIN_INSTALL_PATH -DOPENTRACING_INCLUDE_DIR=$OPENTRACING_INSTALL_PATH/include -DOPENTRACING_LIB=$OPENTRACING_INSTALL_PATH/lib/libopentracing.so
+  - git clone https://github.com/rnburn/zipkin-cpp-opentracing.git $ZIPKIN_SRC
+  - cd $ZIPKIN_SRC && mkdir .build && cd .build
+  - cmake .. -DCMAKE_INSTALL_PREFIX=$ZIPKIN_ROOT -DOPENTRACING_INCLUDE_DIR=$OPENTRACING_INCLUDE -DOPENTRACING_LIB=$OPENTRACING_ROOT/lib/libopentracing.so
   - make && make install
   - mkdir -p $CUDA_ROOT
   - wget $CUDNN_URL -O $CUDNN_PATH
@@ -42,6 +44,7 @@ install:
   - chmod +x $CUDASDK_PATH
   - ./$CUDASDK_PATH --silent --toolkit --toolkitpath=$CUDA_ROOT
   - rm -v $CUDASDK_PATH
+  - cd $TRAVIS_BUILD_DIR
   - ln -s Makefile.config.travis Makefile.config
 
 script:
