travis: try fix cudnn path

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
   global:
     - CUDNN_URL="https://storage.googleapis.com/cwpearson-cudnn/cudnn-8.0-linux-x64-v6.0.tgz"
     - CUDNN_PATH=cudnn.tar.gz
-    - CUDA_ROOT=$HOME/cuda-8.0
+    - CUDA_ROOT=$HOME/cuda
     - CUDASDK_URL="https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda_8.0.61_375.26_linux-run"
     - CUDASDK_PATH="cudasdk.run"
     - OPENTRACING_SRC=$HOME/opentracing-cpp
@@ -40,11 +40,12 @@ install:
   - chmod +x $CUDASDK_PATH
   - ./$CUDASDK_PATH --silent --toolkit --toolkitpath=$CUDA_ROOT
   - rm -v $CUDASDK_PATH
-  - cd $TRAVIS_BUILD_DIR
   - wget $CUDNN_URL -O $CUDNN_PATH
   - tar -xvf $CUDNN_PATH
-  - mv -v cuda/* $CUDA_ROOT/.
+  - mv -v cuda/include/* $CUDA_ROOT/include/.
+  - mv -v cuda/lib64/* $CUDA_ROOT/lib64/.
   - rm -v $CUDNN_PATH
+  - cd $TRAVIS_BUILD_DIR
   - ln -s Makefile.config.travis Makefile.config
 
 script:
