--- a/.travis.yml
+++ b/.travis.yml
@@ -45,10 +45,10 @@ install:
   - mv -v cuda/include/* $CUDA_ROOT/include/.
   - mv -v cuda/lib64/* $CUDA_ROOT/lib64/.
   - rm -v $CUDNN_PATH
-  - cd $TRAVIS_BUILD_DIR
-  - ln -s Makefile.config.travis Makefile.config
 
 script:
+  - cd $TRAVIS_BUILD_DIR
+  - echo "#Passing all vars on command line" > Makefile.config
   - make \
       CUDA_ROOT=$CUDA_ROOT \
       OPENTRACING_INCLUDE=$OPENTRACING_INCLUDE \
