--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ install:
   - mkdir -p $CUDA_ROOT
   - wget $CUDASDK_URL -O $CUDASDK_PATH
   - chmod +x $CUDASDK_PATH
-  - ./$CUDASDK_PATH --silent --toolkit --toolkitpath=$CUDA_ROOT
+  - ./$CUDASDK_PATH --silent --toolkit --toolkitpath=$HOME
+  - ls $CUDA_ROOT
   - rm -v $CUDASDK_PATH
   - wget $CUDNN_URL -O $CUDNN_PATH
   - tar -xvf $CUDNN_PATH
