--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ install:
   - wget $CUDASDK_URL -O $CUDASDK_PATH
   - chmod +x $CUDASDK_PATH
   - ./$CUDASDK_PATH --silent --toolkit --toolkitpath=$HOME
+  - ls $HOME
   - ls $CUDA_ROOT
   - rm -v $CUDASDK_PATH
   - wget $CUDNN_URL -O $CUDNN_PATH
