travis: release and debug builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ addons:
 sudo: required
 services: docker
 env:
+  - BUILD_TYPE=Release
+  - BUILD_TYPE=Debug
   global:
   - CUDNN_URL="https://storage.googleapis.com/cwpearson-cudnn/cudnn-8.0-linux-x64-v6.0.tgz"
   - CUDNN_PATH=cudnn.tar.gz
@@ -22,6 +24,8 @@ env:
   - ZIPKIN_SRC=$HOME/zipkin-cpp-opentracing
   - ZIPKIN_ROOT=$HOME/zipkin
   - ZIPKIN_INCLUDE=$ZIPKIN_ROOT/include
+  
+
 install:
 - git clone https://github.com/opentracing/opentracing-cpp.git $OPENTRACING_SRC
 - cd $OPENTRACING_SRC && mkdir .build && cd .build
