Fixed parent_span & tracer segfault. Improved speed.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ examples/samples/deviceQuery/query
 examples/samples/simpleMultiGPU/mgpu
 examples/samples/UnifiedMemoryStreams/ums
 examples/caffe-master-10-22-2017/*
+examples/mxnet/*
 
 .DS_Store
 ._.DS_Store
