travis: point nccl at CUDA_HOME

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ install:
 - mv -v cuda/lib64/* $CUDA_ROOT/lib64/.
 - git clone https://github.com/NVIDIA/nccl.git $NCCL_SRC
 - make -C $NCCL_SRC
-- make install -C $NCCL_SRC PREFIX=$CUDA_ROOT
+- make install -C $NCCL_SRC CUDA_HOME=$CUDA_ROOT
 script:
 - cd $TRAVIS_BUILD_DIR
 - echo CUDA_ROOT=$CUDA_ROOT >> Makefile.config
