travis: nccl install

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ env:
   - ZIPKIN_ROOT=$HOME/zipkin
   - ZIPKIN_INCLUDE=$ZIPKIN_ROOT/include
   - NCCL_SRC=$HOME/nccl
+  - NCCL_PREFIX=$TMP/nccl
   
 matrix:
   include:
@@ -54,7 +55,9 @@ install:
 - mv -v cuda/include/* $CUDA_ROOT/include/.
 - mv -v cuda/lib64/* $CUDA_ROOT/lib64/.
 - git clone https://github.com/NVIDIA/nccl.git $NCCL_SRC
-- make install -C $NCCL_SRC CUDA_HOME=$CUDA_ROOT PREFIX=$CUDA_ROOT
+- make install -C $NCCL_SRC CUDA_HOME=$CUDA_ROOT PREFIX=$NCCL_PREFIX
+- mv -v $NCCL_PREFIX/include/* $CUDA_ROOT/include/.
+- mv -v $NCCL_PREFIX/lib/* $CUDA_ROOT/lib64/.
 script:
 - cd $TRAVIS_BUILD_DIR
 - echo CUDA_ROOT=$CUDA_ROOT >> Makefile.config
