travis: add make tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,7 @@ script:
 - echo ZIPKIN_OPENTRACING_INCLUDE = $ZIPKIN_INCLUDE >> Makefile.config
 - echo ZIPKIN_OPENTRACING_LIB = $ZIPKIN_ROOT/lib >> Makefile.config
 - make
+- make tests
 - make docker_docs
 after_success:
 - export DEPLOY=dist/amd64
