travis: add profiler script

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,9 @@ script:
 - make
 - make tests
 - make docker_docs
+- cd $TRAVIS_BUILD_DIR/profiler
+- make
+- make docker_docks
 after_success:
 - export DEPLOY=dist/amd64
 - export LATEST=$DEPLOY/latest
