--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,7 @@ install:
 - mv -v $NCCL_PREFIX/lib/* $CUDA_ROOT/lib64/.
 script:
 - cd $TRAVIS_BUILD_DIR/cprof
+- echo CPROF_ROOT=. >> Makefile.config
 - echo CUDA_ROOT=$CUDA_ROOT >> Makefile.config
 - echo OPENTRACING_INCLUDE = $OPENTRACING_INCLUDE >> Makefile.config
 - echo OPENTRACING_LIB = $OPENTRACING_ROOT/lib >> Makefile.config
