travis: set config for profiler build

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,14 +62,17 @@ script:
 - cd $TRAVIS_BUILD_DIR/cprof
 - echo CPROF_ROOT=. >> Makefile.config
 - echo CUDA_ROOT=$CUDA_ROOT >> Makefile.config
-- echo OPENTRACING_INCLUDE = $OPENTRACING_INCLUDE >> Makefile.config
-- echo OPENTRACING_LIB = $OPENTRACING_ROOT/lib >> Makefile.config
-- echo ZIPKIN_OPENTRACING_INCLUDE = $ZIPKIN_INCLUDE >> Makefile.config
-- echo ZIPKIN_OPENTRACING_LIB = $ZIPKIN_ROOT/lib >> Makefile.config
 - make
 - make tests
 - make docker_docs
 - cd $TRAVIS_BUILD_DIR/profiler
+- echo CPROF_ROOT=../cprof >> Makefile.config
+- echo CUDA_ROOT=$CUDA_ROOT >> Makefile.config
+- echo OPENTRACING_ROOT=$OPENTRACING_ROOT >> Makefile.config
+- echo ZIPKIN_OPENTRACING_ROOT=$ZIPKIN_ROOT/lib >> Makefile.config
+
+# Debug or Release
+BUILD_TYPE ?= Debug
 - make
 after_success:
 - export DEPLOY=dist/amd64
