travis: fix ZIPKIN_ROOT in Makefile.config

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ script:
 - echo CPROF_ROOT=../cprof >> Makefile.config
 - echo CUDA_ROOT=$CUDA_ROOT >> Makefile.config
 - echo OPENTRACING_ROOT=$OPENTRACING_ROOT >> Makefile.config
-- echo ZIPKIN_OPENTRACING_ROOT=$ZIPKIN_ROOT/lib >> Makefile.config
+- echo ZIPKIN_OPENTRACING_ROOT=$ZIPKIN_ROOT >> Makefile.config
 - make
 after_success:
 - export DEPLOY=dist/amd64
