--- a/.travis.yml
+++ b/.travis.yml
@@ -59,6 +59,8 @@ install:
 - mv -v $NCCL_PREFIX/include/* $CUDA_ROOT/include/.
 - mv -v $NCCL_PREFIX/lib/* $CUDA_ROOT/lib64/.
 script:
+- cd $TRAVIS_BUILD_DIR
+- touch Makefile.config
 - cd $TRAVIS_BUILD_DIR/cprof
 - echo CPROF_ROOT=. >> Makefile.config
 - echo CUDA_ROOT=$CUDA_ROOT >> Makefile.config
