--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 addons:
   apt:
-    sources:
-    - ubuntu-toolchain-r-test
     packages:
     - libboost-dev
     - libnuma-dev
     - libcurl4-openssl-dev
     - git
     - cmake
-    - g++-4.9
 sudo: required
 services: docker
 env:
@@ -33,6 +30,10 @@ matrix:
     - env: BUILD_TYPE=Release
     - env: BUILD_TYPE=Debug
 
+before_install:
+- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+- sudo apt-get -qq update
+- sudo apt-get install --no-install-suggests --no-install-recommends -y g++-4.9
 install:
 - git clone https://github.com/opentracing/opentracing-cpp.git $OPENTRACING_SRC
 - cd $OPENTRACING_SRC && mkdir .build && cd .build
