travis: add BUILD_TYPE to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,7 @@ script:
 - cd $TRAVIS_BUILD_DIR
 - echo CXX=g++-4.9 >> Makefile.config
 - echo CUDA_ROOT=$CUDA_ROOT >> Makefile.config
+- echo BUILD_TYPE=$BUILD_TYPE >> Makefile.config
 - cd $TRAVIS_BUILD_DIR/cprof
 - touch Makefile.config
 - make
