--- a/.travis.yml
+++ b/.travis.yml
@@ -69,13 +69,13 @@ script:
 - echo BUILD_TYPE=$BUILD_TYPE >> Makefile.config
 - cd $TRAVIS_BUILD_DIR/cprof
 - touch Makefile.config
-- make
-- make tests
-- make docker_docs
 - cd $TRAVIS_BUILD_DIR/profiler
 - echo OPENTRACING_ROOT=$OPENTRACING_ROOT >> Makefile.config
 - echo ZIPKIN_OPENTRACING_ROOT=$ZIPKIN_ROOT >> Makefile.config
+- cd $TRAVIS_BUILD_DIR
 - make
+- make tests
+- make docker_docs
 after_success:
 - export DEPLOY=dist/amd64
 - export LATEST=$DEPLOY/latest
