--- a/.travis.yml
+++ b/.travis.yml
@@ -75,8 +75,8 @@ script:
 - cd $TRAVIS_BUILD_DIR
 - make
 - make tests
-- cd $TRAVIS_BUILD_DIR/cprof
-- make docker_docs
+# - cd $TRAVIS_BUILD_DIR/cprof
+# - make docker_docs
 after_success:
 - export DEPLOY=dist/amd64
 - export LATEST=$DEPLOY/latest
