travis: retry on apt-get

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ matrix:
 
 before_install:
 - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-- sudo apt-get -qq update
-- sudo apt-get install --no-install-suggests --no-install-recommends -y g++-4.9
+- travis_retry sudo apt-get -qq update
+- travis_retry sudo apt-get install --no-install-suggests --no-install-recommends -y g++-4.9
 install:
 - git clone https://github.com/opentracing/opentracing-cpp.git $OPENTRACING_SRC
 - cd $OPENTRACING_SRC && mkdir .build && cd .build
