--- a/Makefile.config.example
+++ b/Makefile.config.example
@@ -18,3 +18,6 @@ CUDA_ROOT = /usr/local/cuda
 
 # If boost is in an usual place
 #BOOST_ROOT = 
+
+# If libnuma is in an unusual place
+#NUMA_ROOT =
