--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ docs/
 
 .vscode/*
 
+examples/testing/nccl/
 examples/testing/cublas/cublas_test
 examples/samples/matrixMul/mm
 examples/samples/vectorAdd/vec
