add NCCL_VERSION_MAJOR to Makefile, nccl_preload.cpp

--- a/profiler/Makefile
+++ b/profiler/Makefile
@@ -41,6 +41,15 @@ ifdef ZIPKIN_OPENTRACING_ROOT
   LIB += -L$(ZIPKIN_OPENTRACING_LIB) -Wl,-rpath=$(ZIPKIN_OPENTRACING_LIB)
 endif
 
+ifeq ($(NCCL_VERSION_MAJOR),2)
+	CXX_DEFINES = -DNCCL_VERSION_MAJOR=2
+else ifeq ($(NCCL_VERSION_MAJOR),1)
+	CXX_DEFINES = -DNCCL_VERSION_MAJOR=2
+else
+  $(error NCCL_VERSION_MAJOR must be 1 or 2)
+endif
+CXXFLAGS += $(CXX_DEFINES)
+
 CPROF_LIB=$(CPROF_ROOT)/lib
 INC += -isystem$(CPROF_ROOT)/include
 LIB += -L$(CPROF_LIB) -lcprof -Wl,-rpath=$(CPROF_LIB)
