--- a/profiler/Makefile
+++ b/profiler/Makefile
@@ -42,7 +42,7 @@ ifdef ZIPKIN_OPENTRACING_ROOT
 endif
 
 CPROF_LIB=$(CPROF_ROOT)/lib
-INC += -isystem$(CPROF_ROOT)/include
+INC += -isystem$(CPROF_ROOT)/include -isystem$(CPROF_ROOT)/external/include
 LIB += -L$(CPROF_LIB) -lcprof -Wl,-rpath=$(CPROF_LIB)
 
 # Set CUDA-related variables
